// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-action-btn Renders \`c-action-btn\` with badge. 1`] = `
<c-simple-tooltip-stub
  badgetooltip="BADGE TOOLTIP"
  badgevalue="true"
  bottom="true"
  content="TOOLTIP"
>
  <button
    class="v-btn mx-1 my-0 c-action-btn__button"
    icon=""
  >
    <i
      aria-hidden="true"
      class="v-icon notranslate material-icons theme--light"
    >
      edit
    </i>
  </button>
</c-simple-tooltip-stub>
`;

exports[`c-action-btn Renders \`c-action-btn\` with custom type correctly. 1`] = `
<c-simple-tooltip-stub
  bottom="true"
  content="tooltip"
>
  <button
    class="v-btn mx-1 my-0 c-action-btn__button"
    icon=""
  >
    <i
      aria-hidden="true"
      class="v-icon notranslate material-icons theme--light color--text"
    >
      test_icon
    </i>
  </button>
</c-simple-tooltip-stub>
`;

exports[`c-action-btn Renders \`c-action-btn\` with default delete type correctly. 1`] = `
<c-simple-tooltip-stub
  bottom="true"
  content="Delete"
>
  <button
    class="v-btn mx-1 my-0 c-action-btn__button"
    icon=""
  >
    <i
      aria-hidden="true"
      class="v-icon notranslate material-icons theme--light error--text"
    >
      delete
    </i>
  </button>
</c-simple-tooltip-stub>
`;

exports[`c-action-btn Renders \`c-action-btn\` with default duplicate type correctly. 1`] = `
<c-simple-tooltip-stub
  bottom="true"
  content="Duplicate"
>
  <button
    class="v-btn mx-1 my-0 c-action-btn__button"
    icon=""
  >
    <i
      aria-hidden="true"
      class="v-icon notranslate material-icons theme--light"
    >
      file_copy
    </i>
  </button>
</c-simple-tooltip-stub>
`;

exports[`c-action-btn Renders \`c-action-btn\` with default edit type correctly. 1`] = `
<c-simple-tooltip-stub
  bottom="true"
  content="Edit"
>
  <button
    class="v-btn mx-1 my-0 c-action-btn__button"
    icon=""
  >
    <i
      aria-hidden="true"
      class="v-icon notranslate material-icons theme--light"
    >
      edit
    </i>
  </button>
</c-simple-tooltip-stub>
`;
